--- a/index.html
+++ b/index.html
@@ -42,29 +42,34 @@
         .edge-trigger-pc:hover ~ .tabs-pc, .tabs-pc:hover { transform: translate(-10px, -50%); }
         .tab-pc { width: 100px; height: 38px; padding-right: 15px; display: flex; align-items: center; justify-content: flex-end; font-size: 13px; font-weight: 700; color: white; border-radius: 0 15px 15px 0; box-shadow: 2px 2px 5px rgba(0,0,0,0.1); cursor: pointer; }
 
-        /* 🔖 手機版：底部固定標籤 */
+        /* 🔖 手機版：底部對齊標籤 */
         .tabs-mobile { display: none; }
 
         @media (max-width: 600px) {
-            .main-container { width: 92vw; height: 75vh; } /* 縮小書本高度給書籤留空間 */
+            .main-container { width: 92vw; height: 82vh; } 
             .edge-trigger-pc, .tabs-pc { display: none; } 
 
             .tabs-mobile { 
                 display: flex; position: absolute; 
-                bottom: -22px; /* ✨ 固定長在書本底部邊緣 */
-                left: 50%; transform: translateX(-50%); 
-                z-index: 50; gap: 4px; width: 95%; justify-content: center;
+                bottom: 0; /* ✨ 貼齊書本容器底部 */
+                left: 0; right: 0;
+                z-index: 200; /* 顯示在書本內容之上 */
+                gap: 2px; width: 100%; justify-content: center;
+                padding: 0 10px; box-sizing: border-box;
+                pointer-events: none; /* 容器不擋住點擊 */
             }
 
             .tab-m {
-                flex: 1; height: 40px; display: flex; align-items: center; justify-content: center;
-                font-size: 11px; font-weight: 700; color: white;
-                border-radius: 12px 12px 0 0; /* ✨ 圓弧向上 */
+                flex: 1; height: 32px; display: flex; align-items: center; justify-content: center;
+                font-size: 10px; font-weight: 700; color: white;
+                border-radius: 10px 10px 0 0; /* ✨ 圓弧向上 */
                 box-shadow: 0 -2px 6px rgba(0,0,0,0.1); cursor: pointer;
-                transition: height 0.2s ease;
+                pointer-events: auto; /* 標籤恢復點擊 */
             }
-            /* 點擊時的小縮放效果 */
-            .tab-m:active { height: 45px; margin-top: -5px; }
+            
+            /* 調整手機版捲動區間距，避免內容被標籤遮到 */
+            .scroll-content { padding-bottom: 50px; }
+            .dots { bottom: 45px; } /* 點點上移 */
         }
 
         /* 顏色定義 */
@@ -88,18 +93,6 @@
             <div class="tab-pc bg-d6" onclick="moveSlideTo(8)">D 6</div>
         </div>
 
-        <div class="tabs-mobile">
-            <div class="tab-m bg-cover" onclick="moveSlideTo(0)">封</div>
-            <div class="tab-m bg-flight" onclick="moveSlideTo(1)">航</div>
-            <div class="tab-m bg-pack" onclick="moveSlideTo(2)">清</div>
-            <div class="tab-m bg-d1" onclick="moveSlideTo(3)">D1</div>
-            <div class="tab-m bg-d2" onclick="moveSlideTo(4)">D2</div>
-            <div class="tab-m bg-d3" onclick="moveSlideTo(5)">D3</div>
-            <div class="tab-m bg-d4" onclick="moveSlideTo(6)">D4</div>
-            <div class="tab-m bg-d5" onclick="moveSlideTo(7)">D5</div>
-            <div class="tab-m bg-d6" onclick="moveSlideTo(8)">D6</div>
-        </div>
-
         <div id="slider">
             <div class="slides-wrapper" id="wrapper">
                 <div class="slide active"><div class="cover-container"><img src="JEJU.png" class="cover-img"></div></div>
@@ -113,17 +106,54 @@
                     <div class="day-header"><div class="day-label">Day 1</div><div class="transport-icon-btn" onclick="toggleInfo(this)">🚌</div></div>
                     <div class="scroll-content">
                         <div class="transport-info">📍 101路於鹹德下 / 201路往東行。</div>
-                        <ul><li><b>11:30</b> 海女包飯、鹹德浴場</li><li><b>15:30</b> 倫敦貝果博物館</li><li><b>18:15</b> 細花排骨</li></ul>
+                        <div class="section-title">11:30 - 15:00 鹹德</div>
+                        <ul>
+                            <li>🔹Hogg 小物 / 海女包飯</li>
+                            <li>🔹鹹德浴場 / Cafe delmoondo</li>
+                            <li>🔹Audrant Bakery 大蒜麵包</li>
+                            <li>🔹943studio / Daily Stitch</li>
+                        </ul>
+                        <div class="section-title">15:00 - 16:30 東福里</div>
+                        <ul><li>🔹倫敦貝果博物館 / Cafe Layered</li></ul>
+                        <div class="section-title">16:45 - 20:00 月汀里 / 細花</div>
+                        <ul><li><b>16:45</b> 月汀里散步</li><li><b>18:15</b> 🍽️ 細花排骨 (最後點餐 20:00)</li></ul>
                     </div>
                 </div></div>
                 <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 2</div></div><div class="scroll-content"><ul><li>牛島環島 & 城山日出峰</li></ul></div></div></div>
-                <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 3</div></div><div class="scroll-content"><ul><li>正房瀑布、柱狀節理、山茶花之丘</li></ul></div></div></div>
+                <div class="slide"><div class="content-overlay">
+                    <div class="day-header"><div class="day-label">Day 3</div><div class="transport-icon-btn" onclick="toggleInfo(this)">🚌</div></div>
+                    <div class="scroll-content">
+                        <div class="transport-info">📍 公車：510 / 600 / 202 路</div>
+                        <ul>
+                            <li><b>08:30</b> 步行 ➔ 正房瀑布</li>
+                            <li><b>10:30</b> 🗿 柱狀節理帶看海</li>
+                            <li><b>11:20</b> 中文海邊 + OY + 星巴克</li>
+                            <li><b>14:30</b> 🚌 前往山茶花之丘</li>
+                            <li><b>15:30</b> 🌺 山茶花之丘拍照</li>
+                            <li><b>16:20</b> 偶來市場 & 李仲線逛街</li>
+                        </ul>
+                    </div>
+                </div></div>
                 <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 4</div></div><div class="scroll-content"><ul><li>三麗鷗樂園、亂打秀🎭</li></ul></div></div></div>
-                <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content"><ul><li>尋找海豚🐬、涯月香水、超市爆買</li></ul></div></div></div>
+                <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content"><ul><li>尋找海豚🐬、涯月香水、超市爆買🛒</li></ul></div></div></div>
                 <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">Day 6</div></div><div class="scroll-content"><ul><li>機場退稅、起飛回家✈️</li></ul></div></div></div>
                 <div class="slide"><div class="content-overlay"><div class="day-header"><div class="day-label">提醒</div></div><div class="scroll-content"><ul><li>Naver Map / Papago 必備</li><li>祝旅途愉快！🍊</li></ul></div></div></div>
                 <div class="slide"><div class="cover-container" style="z-index: 5;"><img src="JEJU B.png" class="cover-img"></div></div>
             </div>
+            
+            <div class="tabs-mobile">
+                <div class="tab-m bg-cover" onclick="moveSlideTo(0)">封</div>
+                <div class="tab-m bg-flight" onclick="moveSlideTo(1)">航</div>
+                <div class="tab-m bg-pack" onclick="moveSlideTo(2)">清</div>
+                <div class="tab-m bg-d1" onclick="moveSlideTo(3)">D1</div>
+                <div class="tab-m bg-d2" onclick="moveSlideTo(4)">D2</div>
+                <div class="tab-m bg-d3" onclick="moveSlideTo(5)">D3</div>
+                <div class="tab-m bg-d4" onclick="moveSlideTo(6)">D4</div>
+                <div class="tab-m bg-d5" onclick="moveSlideTo(7)">D5</div>
+                <div class="tab-m bg-d6" onclick="moveSlideTo(8)">D6</div>
+            </div>
+
+            <div class="dots" id="dots"></div>
         </div>
     </div>
 
@@ -136,6 +166,7 @@
             currentIdx = idx;
             wrapper.style.transform = `translateX(-${currentIdx * (100 / totalSlides)}%)`;
             slides.forEach((slide, i) => slide.classList.toggle('active', i === currentIdx));
+            document.querySelectorAll('.dot').forEach((dot, i) => dot.classList.toggle('active', i === currentIdx));
         }
 
         function toggleInfo(btn) {
