--- a/index.html
+++ b/index.html
@@ -19,48 +19,53 @@
         .slide.active { visibility: visible; }
 
         /* 橘子頁眉 */
-        .day-header { position: relative; height: 95px; margin: 15px; border-radius: 20px; overflow: hidden; display: flex; align-items: center; padding: 0 25px; flex-shrink: 0; z-index: 1; }
+        .day-header { position: relative; height: 90px; margin: 15px; border-radius: 20px; overflow: hidden; display: flex; align-items: center; padding: 0 25px; flex-shrink: 0; z-index: 1; }
         .day-header::before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('orange.jpg') center/cover; opacity: 0.6; z-index: -1; }
-        .day-label { font-size: 26px; font-weight: 700; color: #fff; text-shadow: 1px 2px 4px rgba(0,0,0,0.3); }
+        .day-label { font-size: 24px; font-weight: 700; color: #fff; text-shadow: 1px 2px 4px rgba(0,0,0,0.3); }
 
-        .scroll-content { flex: 1; overflow-y: auto; padding: 0 22px 25px 22px; color: #444; }
+        /* 行程內容：底部留白確保不被標籤遮擋 */
+        .scroll-content { flex: 1; overflow-y: auto; padding: 0 22px 20px 22px; color: #444; }
+        /* 電腦版不需要額外 padding，手機版才需要 */
+        @media (max-width: 600px) {
+            .scroll-content { padding-bottom: 70px; } 
+        }
+
         .section-title { font-size: 13px; color: var(--orange); font-weight: bold; margin: 15px 0 5px 0; display: flex; align-items: center; }
         .section-title::after { content: ""; flex: 1; height: 1px; background: #eee; margin-left: 10px; }
         ul { list-style: none; padding: 0; margin: 0; }
         li { padding: 8px 0; border-bottom: 1px solid #f9f9f9; font-size: 14px; line-height: 1.4; }
         li b { color: var(--orange); font-weight: 700; }
 
-        /* 🔖 電腦版：右側標籤 (固定 70px) */
+        /* 🔖 電腦版：右側標籤 (維持 70px 抽屜式) */
         .tabs-pc { position: absolute; left: 100%; top: 50%; display: flex; flex-direction: column; gap: 8px; z-index: 50; transform: translate(-100%, -50%); transition: transform 0.4s ease; }
         .edge-trigger-pc { position: absolute; right: -30px; top: 10%; width: 60px; height: 80%; z-index: 150; cursor: pointer; }
         .edge-trigger-pc:hover ~ .tabs-pc, .tabs-pc:hover { transform: translate(-10px, -50%); }
         .tab-pc { width: 70px; height: 38px; padding-right: 12px; display: flex; align-items: center; justify-content: flex-end; font-size: 12px; font-weight: 700; color: white; border-radius: 0 15px 15px 0; box-shadow: 2px 2px 5px rgba(0,0,0,0.1); cursor: pointer; }
 
-        /* 🔖 手機版：底部標籤 (精準對齊下緣) */
+        /* 🔖 手機版：內嵌底部標籤 (永遠顯示在書本內) */
         .tabs-mobile { display: none; }
 
         @media (max-width: 600px) {
-            .main-container { width: 92vw; height: 80vh; }
+            .main-container { width: 92vw; height: 82vh; }
             .edge-trigger-pc, .tabs-pc { display: none; }
             
             .tabs-mobile { 
                 display: flex; position: absolute; 
-                bottom: 0; left: 50%; 
-                width: 95%; height: 45px; /* 固定高度 */
-                transform: translate(-50%, 85%); /* 平時只露出一點邊 */
-                z-index: 50; gap: 4px; justify-content: center; 
-                transition: transform 0.3s ease-out;
+                bottom: 0; left: 0; width: 100%; height: 55px; 
+                z-index: 200; /* 放在書內的最上層 */
+                gap: 2px; justify-content: center; align-items: flex-end;
+                background: linear-gradient(to top, rgba(255,255,255,1) 70%, rgba(255,255,255,0) 100%);
+                padding-bottom: 5px;
             }
-            /* 觸發區域：改為偵測書本底部 */
-            .main-container:active .tabs-mobile, 
-            .tabs-mobile:hover { transform: translate(-50%, -2px); } /* 向上彈至對齊書本底邊 */
 
             .tab-m {
-                flex: 1; height: 100%; display: flex; align-items: center; justify-content: center;
-                font-size: 16px; color: white;
-                border-radius: 12px 12px 0 0; 
-                box-shadow: 0 -2px 10px rgba(0,0,0,0.1); cursor: pointer;
+                flex: 1; height: 45px; display: flex; align-items: center; justify-content: center;
+                font-size: 18px; color: white;
+                border-radius: 10px 10px 0 0; 
+                cursor: pointer;
+                transition: transform 0.2s;
             }
+            .tab-m:active { transform: translateY(-3px); }
         }
 
         /* 顏色定義 */
@@ -84,23 +89,11 @@
             <div class="tab-pc bg-d6" onclick="moveSlideTo(8)">D 6</div>
         </div>
 
-        <div class="tabs-mobile">
-            <div class="tab-m bg-cover" onclick="moveSlideTo(0)">🏠</div>
-            <div class="tab-m bg-flight" onclick="moveSlideTo(1)">✈️</div>
-            <div class="tab-m bg-pack" onclick="moveSlideTo(2)">🧳</div>
-            <div class="tab-m bg-d1" onclick="moveSlideTo(3)">D1</div>
-            <div class="tab-m bg-d2" onclick="moveSlideTo(4)">D2</div>
-            <div class="tab-m bg-d3" onclick="moveSlideTo(5)">D3</div>
-            <div class="tab-m bg-d4" onclick="moveSlideTo(6)">D4</div>
-            <div class="tab-m bg-d5" onclick="moveSlideTo(7)">D5</div>
-            <div class="tab-m bg-d6" onclick="moveSlideTo(8)">D6</div>
-        </div>
-
         <div id="slider">
             <div class="slides-wrapper" id="wrapper">
                 <div class="slide active">
-                    <div class="content-overlay" style="background: white; height: 100%; display: flex; align-items: center; justify-content: center;">
-                        <img src="JEJU.png" style="width: 90%; object-fit: contain;">
+                    <div class="cover-container" style="background: white; height: 100%; display: flex; align-items: center; justify-content: center;">
+                        <img src="JEJU.png" style="width: 85%; object-fit: contain;">
                     </div>
                 </div>
 
@@ -114,19 +107,41 @@
                 </div></div>
 
                 <div class="slide"><div class="day-header"><div class="day-label">Day 1</div></div><div class="scroll-content">
-                    <div class="section-title">11:30 鹹德海岸</div><ul><li>海女包飯、Cafe delmoondo</li></ul>
+                    <div class="section-title">11:30 鹹德海岸</div><ul><li>海女包飯、Cafe delmoondo</li><li>Audrant Bakery 大蒜麵包</li><li>逛文創店與 Olive Young</li></ul>
                     <div class="section-title">15:00 東福里</div><ul><li>倫敦貝果博物館、Cafe Layered</li></ul>
+                    <div class="section-title">18:15 細花</div><ul><li>🍽️ 細花排骨 (Sehwa)</li></ul>
                 </div></div>
                 
-                <div class="slide"><div class="day-header"><div class="day-label">Day 2</div></div><div class="scroll-content"><ul><li>牛島環島、花生冰淇淋、城山日出峰</li></ul></div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 3</div></div><div class="scroll-content"><ul><li>正房瀑布、柱狀節理帶、山茶花之丘</li></ul></div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 4</div></div><div class="scroll-content"><ul><li>三麗鷗樂園、亂打秀</li></ul></div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content"><ul><li>尋找海豚、涯月香水體驗</li></ul></div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 6</div></div><div class="scroll-content"><ul><li>機場退稅、回家</li></ul></div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">提醒</div></div><div class="scroll-content"><ul><li>Naver Map / Papago 必備</li></ul></div></div>
-                <div class="slide"><div class="content-overlay" style="background: white; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img src="JEJU B.png" style="width: 90%; object-fit: contain;">
+                <div class="slide"><div class="day-header"><div class="day-label">Day 2</div></div><div class="scroll-content">
+                    <div class="section-title">牛島 & 城山</div><ul><li>⛴️ 牛島環島、花生冰淇淋</li><li>⛰️ 城山日出峰壯闊海景</li></ul>
                 </div></div>
+
+                <div class="slide"><div class="day-header"><div class="day-label">Day 3</div></div><div class="scroll-content">
+                    <ul><li><b>08:30</b> 正房瀑布 ➔ <b>10:30</b> 柱狀節理</li><li><b>15:30</b> 山茶花之丘 ➔ <b>17:00</b> 偶來市場</li></ul>
+                </div></div>
+
+                <div class="slide"><div class="day-header"><div class="day-label">Day 4</div></div><div class="scroll-content"><ul><li>三麗鷗主題樂園、史努比花園、亂打秀</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content"><ul><li>尋找野生海豚、涯月香水體驗、樂天超市</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">Day 6</div></div><div class="scroll-content"><ul><li>機場退稅、起飛回家 ✈️</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">提醒</div></div><div class="scroll-content"><ul><li>Naver Map / Papago 必備</li></ul></div></div>
+
+                <div class="slide">
+                    <div class="cover-container" style="background: white; height: 100%; display: flex; align-items: center; justify-content: center;">
+                        <img src="JEJU B.png" style="width: 85%; object-fit: contain;">
+                    </div>
+                </div>
+            </div>
+
+            <div class="tabs-mobile">
+                <div class="tab-m bg-cover" onclick="moveSlideTo(0)">🏠</div>
+                <div class="tab-m bg-flight" onclick="moveSlideTo(1)">✈️</div>
+                <div class="tab-m bg-pack" onclick="moveSlideTo(2)">🧳</div>
+                <div class="tab-m bg-d1" onclick="moveSlideTo(3)">D1</div>
+                <div class="tab-m bg-d2" onclick="moveSlideTo(4)">D2</div>
+                <div class="tab-m bg-d3" onclick="moveSlideTo(5)">D3</div>
+                <div class="tab-m bg-d4" onclick="moveSlideTo(6)">D4</div>
+                <div class="tab-m bg-d5" onclick="moveSlideTo(7)">D5</div>
+                <div class="tab-m bg-d6" onclick="moveSlideTo(8)">D6</div>
             </div>
         </div>
     </div>
@@ -142,7 +157,7 @@
             slides.forEach((slide, i) => slide.classList.toggle('active', i === currentIdx));
         }
 
-        // 觸控翻頁
+        // 觸控滑動
         let touchStartX = 0;
         document.getElementById('slider').addEventListener('touchstart', e => { touchStartX = e.changedTouches[0].screenX; }, {passive: true});
         document.getElementById('slider').addEventListener('touchend', e => {
