--- a/index.html
+++ b/index.html
@@ -12,17 +12,11 @@
 
         .main-container { position: relative; width: 480px; height: 82vh; display: flex; justify-content: center; align-items: center; }
         
-        #slider { 
-            width: 100%; height: 100%; 
-            position: relative; overflow: hidden; 
-            z-index: 100; border-radius: 25px; 
-            background: var(--paper); box-shadow: 0 10px 40px rgba(0,0,0,0.1); 
-        }
+        #slider { width: 100%; height: 100%; position: relative; overflow: hidden; z-index: 100; border-radius: 25px; background: var(--paper); box-shadow: 0 10px 40px rgba(0,0,0,0.1); }
         .slides-wrapper { display: flex; width: 1100%; height: 100%; transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
         .slide { width: 9.0909%; height: 100%; flex-shrink: 0; position: relative; visibility: hidden; display: flex; flex-direction: column; }
         .slide.active { visibility: visible; }
 
-        /* 🖼️ 封面圖片置中 */
         .cover-page { width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background: #ffffff; }
         .cover-img { width: 85%; height: auto; object-fit: contain; }
 
@@ -31,9 +25,26 @@
         .day-header::before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('orange.jpg') center/cover; opacity: 0.6; z-index: -1; }
         .day-label { font-size: 24px; font-weight: 700; color: #fff; text-shadow: 1px 2px 4px rgba(0,0,0,0.3); }
 
-        /* 📜 行程內容區 */
+        /* 🚌 交通 Icon 按鈕 */
+        .transport-icon-btn { 
+            position: absolute; right: 20px; top: 50%; transform: translateY(-50%); 
+            width: 38px; height: 38px; 
+            background: rgba(255, 255, 255, 0.9); 
+            border: 1.5px solid var(--orange); 
+            border-radius: 50%; 
+            display: flex; align-items: center; justify-content: center; 
+            font-size: 20px; cursor: pointer; 
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
+            z-index: 10;
+        }
+
         .scroll-content { flex: 1; overflow-y: auto; padding: 0 22px 20px 22px; color: #444; }
         @media (max-width: 600px) { .scroll-content { padding-bottom: 60px; } }
+
+        /* 🚌 交通資訊摺疊區 */
+        .transport-info { max-height: 0; overflow: hidden; transition: all 0.3s ease; background: #fffdf7; border-radius: 12px; font-size: 12px; line-height: 1.6; }
+        .transport-info.open { max-height: 400px; padding: 15px; margin-top: 5px; margin-bottom: 15px; border: 1.5px solid #ffe0b2; }
+        .bus-badge { background: #e3f2fd; color: #1976d2; padding: 2px 5px; border-radius: 4px; font-weight: bold; font-size: 11px; }
 
         .section-title { font-size: 13px; color: var(--orange); font-weight: bold; margin: 15px 0 5px 0; display: flex; align-items: center; }
         .section-title::after { content: ""; flex: 1; height: 1px; background: #eee; margin-left: 10px; }
@@ -48,9 +59,8 @@
         .edge-trigger-pc:hover ~ .tabs-pc, .tabs-pc:hover { transform: translate(-10px, -50%); }
         .tab-pc { width: 70px; height: 38px; padding-right: 12px; display: flex; align-items: center; justify-content: flex-end; font-size: 11px; font-weight: 700; color: white; border-radius: 0 15px 15px 0; box-shadow: 2px 2px 5px rgba(0,0,0,0.1); cursor: pointer; }
 
-        /* 🔖 手機版標籤 (底部內嵌、字體改小) */
+        /* 🔖 手機版標籤 (底部內嵌、字體 13px) */
         .tabs-mobile { display: none; }
-
         @media (max-width: 600px) {
             .main-container { width: 92vw; height: 82vh; }
             .edge-trigger-pc, .tabs-pc { display: none; }
@@ -88,59 +98,60 @@
                 </div></div>
 
                 <div class="slide"><div class="day-header"><div class="day-label">行李清單</div></div><div class="scroll-content">
-                    <ul><li>✅ 護照、K-ETA、WOWPASS</li><li>✅ 轉接頭、網卡、行動電源</li><li>✅ 韓幣、雨具、空行李箱</li></ul>
+                    <ul><li>✅ 護照、K-ETA、WOWPASS</li><li>✅ 轉接頭、網卡、行動電源</li><li>✅ 韓幣、空行李箱</li></ul>
                 </div></div>
 
                 <div class="slide"><div class="content-overlay">
-                    <div class="day-header"><div class="day-label">Day 1</div></div>
+                    <div class="day-header">
+                        <div class="day-label">Day 1</div>
+                        <div class="transport-icon-btn" onclick="toggleInfo(this)">🚌</div>
+                    </div>
                     <div class="scroll-content">
-                        <div class="section-title">1. 機場 ➔ 鹹德 (11:30 - 15:00)</div>
+                        <div class="transport-info">
+                            📍 <b>1. 機場➔鹹德</b>：2號出口搭 <span class="bus-badge">101路</span> 於「鹹德換乘站」下。<br>
+                            📍 <b>2. 鹹德➔東福里</b>：搭 <span class="bus-badge">201路</span> 於「Dongbok-ri」下。
+                        </div>
+                        <div class="section-title">11:30 - 15:00 鹹德</div>
                         <ul>
-                            <li>🚌 機場 2 號出口搭 <b>101路</b> 急行巴士 ➔「鹹德換乘站」</li>
-                            <li>🔹 Hogg (小物店)</li>
-                            <li>🔹 海女包飯 (買去海邊吃 🍱)</li>
+                            <li>🔹 Hogg 小物 / 海女包飯 (去海邊吃 🍱)</li>
                             <li>🔹 鹹德海水浴場 / Cafe delmoondo</li>
-                            <li>🔹 Audrant Bakery (大蒜麵包)</li>
-                            <li>🔹 943studio、Daily Stitch、Olive Young</li>
+                            <li>🔹 Audrant Bakery 大蒜麵包 / Olive Young</li>
                         </ul>
-                        <div class="section-title">2. 鹹德 ➔ 東福里 (15:00 - 16:30)</div>
-                        <ul>
-                            <li>🚌 <b>201路</b> ➔「東福里 (Dongbok-ri)」站</li>
-                            <li>🔹 倫敦貝果博物館 (18:00關)、Cafe Layered</li>
-                        </ul>
-                        <div class="section-title">3. 東福里 ➔ 月汀里 ➔ 細花</div>
-                        <ul>
-                            <li>🚌 <b>201路</b> (約 10 min) ➔ 月汀里海岸散步</li>
-                            <li>🍽️ <b>18:15</b> SEhwa 細花排骨 (最後點餐 20:00)</li>
-                        </ul>
+                        <div class="section-title">15:00 - 16:30 東福里</div>
+                        <ul><li>🔹 倫敦貝果博物館 / Cafe Layered</li></ul>
+                        <div class="section-title">16:45 - 20:00 月汀里 / 細花</div>
+                        <ul><li><b>18:15</b> 🍽️ SEhwa 細花排骨 (最後點餐 20:00)</li></ul>
                     </div>
                 </div></div>
 
                 <div class="slide"><div class="day-header"><div class="day-label">Day 2</div></div><div class="scroll-content">
-                    <ul><li>⛴️ 牛島環島、花生冰淇淋、城山日出峰壯闊海景</li></ul>
+                    <ul><li>⛴️ 牛島環島、電動車、花生冰淇淋、城山日出峰</li></ul>
                 </div></div>
 
                 <div class="slide"><div class="content-overlay">
-                    <div class="day-header"><div class="day-label">Day 3</div></div>
+                    <div class="day-header">
+                        <div class="day-label">Day 3</div>
+                        <div class="transport-icon-btn" onclick="toggleInfo(this)">🚌</div>
+                    </div>
                     <div class="scroll-content">
+                        <div class="transport-info">
+                            📍 <b>正房➔柱狀節理</b>：搭 <span class="bus-badge">510 / 600路</span>。<br>
+                            📍 <b>節理➔中文</b>：搭 <span class="bus-badge">202 / 510路</span>。
+                        </div>
                         <ul>
-                            <li><span class="time-tag">08:30-09:00</span> 步行：第一 70 酒店 ➔ 正房瀑布 (₩2000)</li>
-                            <li><span class="time-tag">09:00-09:30</span> 正房瀑布巡禮</li>
-                            <li><span class="time-tag">09:30-10:30</span> 🚌 往柱狀節理帶</li>
-                            <li><span class="time-tag">10:30-11:00</span> 🗿 柱狀節理帶看海</li>
-                            <li><span class="time-tag">11:00-11:20</span> 🚌 往中文海水浴場</li>
-                            <li><span class="time-tag">11:20-14:30</span> 海邊 + Olive Young + 星巴克 + 咖啡廳</li>
-                            <li><span class="time-tag">14:30-15:30</span> 🚌 往山茶花之丘</li>
-                            <li><span class="time-tag">15:30-16:20</span> 🌺 山茶花之丘 (Camellia Hill)</li>
+                            <li><span class="time-tag">08:30-09:30</span> 步行正房瀑布 (₩2000)</li>
+                            <li><span class="time-tag">09:30-11:00</span> 🚌 柱狀節理帶看海</li>
+                            <li><span class="time-tag">11:20-14:30</span> 中文海水浴場 + 星巴克 + 咖啡廳</li>
+                            <li><span class="time-tag">14:30-16:20</span> 🚌 山茶花之丘 (Camellia Hill)</li>
                             <li><span class="time-tag">16:20-17:30</span> 偶來市場 & 李仲線逛街</li>
                         </ul>
                     </div>
                 </div></div>
 
-                <div class="slide"><div class="day-header"><div class="day-label">Day 4</div></div><div class="scroll-content">...</div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content">...</div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">Day 6</div></div><div class="scroll-content">...</div></div>
-                <div class="slide"><div class="day-header"><div class="day-label">提醒</div></div><div class="scroll-content">...</div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">Day 4</div></div><div class="scroll-content"><ul><li>三麗鷗樂園、亂打秀 🎭</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">Day 5</div></div><div class="scroll-content"><ul><li>尋找海豚 🐬、涯月香水體驗</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">Day 6</div></div><div class="scroll-content"><ul><li>機場退稅、11:45 飛機回家 ✈️</li></ul></div></div>
+                <div class="slide"><div class="day-header"><div class="day-label">提醒</div></div><div class="scroll-content"><ul><li>Naver Map / Papago 必備 🍊</li></ul></div></div>
                 <div class="slide"><div class="cover-page"><img src="JEJU B.png" class="cover-img"></div></div>
             </div>
 
@@ -167,6 +178,12 @@
             currentIdx = idx;
             wrapper.style.transform = `translateX(-${currentIdx * (100 / totalSlides)}%)`;
             slides.forEach((slide, i) => slide.classList.toggle('active', i === currentIdx));
+        }
+
+        function toggleInfo(btn) {
+            const info = btn.closest('.slide').querySelector('.transport-info');
+            info.classList.toggle('open');
+            btn.style.background = info.classList.contains('open') ? "#ffcc80" : "rgba(255, 255, 255, 0.9)";
         }
 
         let touchStartX = 0;
